fix body overflow

--- a/demo/style.css
+++ b/demo/style.css
@@ -126,7 +126,7 @@ body {
   overscroll-behavior-y: contain;
   /* -webkit-tap-highlight-color: transparent; */
   text-align: center; /* It's a game! */
-  overflow: hidden;
+  overflow-x: hidden;
   height: 100%;
 }
 h1, h2, h3, h4, h5, h6 {
